# plusi_lr_avt

./: CMakeLists.txt  Student.cpp  Student.h  add_to_file.cpp  add_to_file.h  cher  cher.cpp  cher_2  cher_2.cpp  file  file_g_p.cpp  file_g_p.h  gener  generatr.cpp  generatr.h  main.cpp  prob.txt  reun  run.cpp  sort_metods.cpp  work_with_files.cpp  work_with_files.h
include/: addstudentwindow.h  common.h  fileprocessor.h  generat.h  mainwindow.h  sorter.h  sortwindow.h
sortirov/: otv.txt  prob.txt  sich_sort.cpp  sich_sort.h  sort_b.cpp  sort_b.h  sort_v.cpp  sort_v.h
src/: addstudentwindow.cpp  fileprocessor.cpp  generat.cpp  main.cpp  mainwindow.cpp  sorter.cpp  sortwindow.cpp
